fix layout on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -2,29 +2,3 @@
  * CSS files with the .module.css suffix will be treated as CSS modules
  * and scoped locally.
  */
-
-.heroBanner {
-  padding: 4rem 0;
-  position: relative;
-  overflow: hidden;
-}
-
-@media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
-  }
-}
-
-.buttons {
-  display: flex;
-  /* add some spacing between elements */
-  gap: 1rem;
-  
-}
-
-.secondaryButton {
-  color: #fff !important;
-}
-.secondaryButton:hover {
-  color: #000 !important;
-}
